tests/sumo/basic/tls/errors/missing_yellow/options.sumo
--no-step-log --no-duration-log --net-file=net2.net.xml
--additional-files input_additional.add.xml
-e 300
